Changed the class file format to java-11 from java-17